{
  "version": 4,
  "terraform_version": "1.14.0",
  "serial": 82,
  "lineage": "3322a256-38de-bd4c-4d62-9814c413bf40",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_address",
      "name": "static_ip_asia",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "34.47.163.149",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2025-11-26T10:15:05.022-08:00",
            "effective_labels": {
              "goog-terraform-provisioned": "true"
            },
            "id": "projects/arafat-468807/regions/asia-south1/addresses/vm-static-ip-asia",
            "label_fingerprint": "vezUS-42LLM=",
            "name": "vm-static-ip-asia",
            "network_tier": "PREMIUM",
            "prefix_length": 0,
            "project": "arafat-468807",
            "region": "asia-south1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/arafat-468807/regions/asia-south1/addresses/vm-static-ip-asia",
            "terraform_labels": {
              "goog-terraform-provisioned": "true"
            },
            "users": [
              "https://www.googleapis.com/compute/v1/projects/arafat-468807/zones/asia-south1-b/instances/migrated-vm-asia"
            ]
          },
          "identity_schema_version": 0,
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2025-11-25T16:07:53.320-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/arafat-468807/global/firewalls/allow-ssh",
            "log_config": [],
            "name": "allow-ssh",
            "network": "https://www.googleapis.com/compute/v1/projects/arafat-468807/global/networks/default",
            "params": [],
            "priority": 1000,
            "project": "arafat-468807",
            "self_link": "https://www.googleapis.com/compute/v1/projects/arafat-468807/global/firewalls/allow-ssh",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_tunnel",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "51820"
                ],
                "protocol": "udp"
              },
              {
                "ports": [
                  "7000",
                  "80",
                  "443"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2025-11-26T10:15:04.890-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/arafat-468807/global/firewalls/allow-wireguard-frp",
            "log_config": [],
            "name": "allow-wireguard-frp",
            "network": "https://www.googleapis.com/compute/v1/projects/arafat-468807/global/networks/default",
            "params": [],
            "priority": 1000,
            "project": "arafat-468807",
            "self_link": "https://www.googleapis.com/compute/v1/projects/arafat-468807/global/firewalls/allow-wireguard-frp",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "app_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "force_attach": false,
                "guest_os_features": [
                  "UEFI_COMPATIBLE",
                  "VIRTIO_SCSI_MULTIQUEUE",
                  "GVNIC"
                ],
                "initialize_params": [
                  {
                    "architecture": "X86_64",
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-11-bullseye-v20251111",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/arafat-468807/zones/asia-south1-b/disks/migrated-vm-asia"
              }
            ],
            "can_ip_forward": true,
            "cpu_platform": "Intel Broadwell",
            "creation_timestamp": "2025-11-26T10:15:19.317-08:00",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "effective_labels": {
              "goog-terraform-provisioned": "true"
            },
            "enable_display": false,
            "id": "projects/arafat-468807/zones/asia-south1-b/instances/migrated-vm-asia",
            "instance_id": "6466983619885464921",
            "label_fingerprint": "vezUS-42LLM=",
            "machine_type": "e2-micro",
            "metadata": {
              "ssh-keys": "romelraisul:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAACAQCV6YGhDPDA8P35MeaINOpdsHk8asHANoJLsduc5t4uWaXXq40ugar3gSfaRNhSXGGdqR0C7gTgzONAOPgbVjtAre7AWH0NMP4+755FsZToPAuDFWmcp2j45LuHxU5knMQ/2hnDygvJCDl0ZQGiD1+lusXZVBtCWIm45beHNaPMJ5BWZTZECvh4wwCqFDWAVlZwHfQ8oWfSv3AN4zGHOJ5zPmsC8FGsUFjqCVyCtZBLZm69T5ZCNDJzqx4FrJZGzns8/xvxOGAyBEnfUrVJ78zhHD+6eoRt5Sw4xdE/lRsYK17XKWryfGga7qONHgVAIpuFu3p8rCKRYFL1VNix5rAPc/JzIcD5uRf4xPDs+SdBNQaSxDAsFMpY3JsHqxMGlPzRyhCj3R1ekJpI+DtqIws9a2c5Qj6Awuir/vFSy [...]
            },
            "metadata_fingerprint": "V4FPgk1sg9Q=",
            "metadata_startup_script": "#!/bin/bash\nset -e\nset -x\n# This script is executed on the GCP VM at startup.\n\n# --- Installation ---\napt-get update -y\napt-get install -y wireguard iptables-persistent dos2unix\n\n# --- IP Forwarding ---\necho \"net.ipv4.ip_forward=1\" \u003e /etc/sysctl.d/99-wireguard.conf\nsysctl -p /etc/sysctl.d/99-wireguard.conf\n\n# --- Key and IP Definitions ---\n# Note: These values are placeholders and will be replaced by Terraform.\nserver_private_key=\"EO [...]
            "name": "migrated-vm-asia",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.47.163.149",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/arafat-468807/global/networks/default",
                "network_ip": "10.160.0.10",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/arafat-468807/regions/asia-south1/subnetworks/default",
                "subnetwork_project": "arafat-468807"
              }
            ],
            "project": "arafat-468807",
            "scheduling": [
              {
                "automatic_restart": true,
                "availability_domain": 0,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/arafat-468807/zones/asia-south1-b/instances/migrated-vm-asia",
            "service_account": [
              {
                "email": "184510023495-compute@developer.gserviceaccount.com",
                "scopes": [
                  "https://www.googleapis.com/auth/cloud-platform"
                ]
              }
            ],
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags_fingerprint": "42WmSpB8rSM=",
            "terraform_labels": {
              "goog-terraform-provisioned": "true"
            },
            "zone": "asia-south1-b"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ],
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_rsa"
              }
            ],
            [
              {
                "type": "get_attr",
                "value": "metadata"
              },
              {
                "type": "index",
                "value": {
                  "value": "ssh-keys",
                  "type": "string"
                }
              }
            ],
            [
              {
                "type": "get_attr",
                "value": "metadata_startup_script"
              }
            ]
          ],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_address.static_ip_asia"
          ],
          "create_before_destroy": true
        }
      ]
    }
  ]
}